--- a/requirements.txt
+++ b/requirements.txt
@@ -25,7 +25,7 @@ safetensors==0.3.1
 scikit-image==0.21.0
 timm==0.9.2
 tomesd==0.1.3
-torch
+torch==2.1.0
 torchdiffeq==0.2.3
 torchsde==0.2.6
 transformers==4.30.2
